--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,321 @@
-.App {
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: #f2f2f2;
+}
+
+header {
+  background: #4a90e2;
+  display: flex;
+  justify-content: center;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 64px;
+  padding: 0 42px;
+  color: #fff;
+  min-width: 980px;
+  font-size: 14px;
+}
+
+nav img {
+  height: 24px;
+}
+
+nav > span {
+  font-size: 20px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+nav > div {
+  display: flex;
+  align-items: center;
+}
+
+nav > div i {
+  margin-left: 8px;
+}
+
+.postlist {
+  width: 700px;
+  margin: 0 auto 20px;
+}
+
+.post {
+  margin-top: 20px;
+  border-radius: 8px;
+  background: white;
+  padding: 20px;
+  color: #3e3e3e;
+  line-height: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.post-header {
+  display: flex;
+  align-items: center;
+}
+
+.post-header .details {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  font-size: 11px;
+  color: #9a9a9a;
+  line-height: 14px;
+}
+
+.post-header .details span:first-child {
+  font-size: 14px;
+  color: #4a4a4a;
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+
+.avatar {
+  min-height: 32px;
+  min-width: 32px;
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+}
+
+.post-content {
+  margin-top: 15px;
+  font-size: 14px;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background: #eeeeee;
+}
+
+.post-comments {
+  margin-top: 20px;
+}
+
+.comment {
+  margin-top: 20px;
+  display: flex;
+}
+
+.comment p {
+  border-radius: 20px;
+  background: #eeeeee;
+  margin-left: 10px;
+  padding: 15px;
+  font-size: 13px;
+}
+
+.comment span {
+  font-weight: bold;
+  margin-right: 6px;
+}
+.brandIcon{
+  height: 20px;
+}
+.span{
+  color: black;
+  background-color: black;
+}
+.n-form-control{
+  border: 0px;
+  border-radius: 0px;
+  height: 32px;
+}
+
+.n-container{
+  background-color: #e9ebee;
+}
+
+body{
+  background-color: #e9ebee;
+}
+
+.left-sidebar{
+  display: none;
+}
+
+.right-sidebar{
+  display: none;
+}
+
+.navbar-header{
+  background-color: #4267b2
+}
+
+
+@media (min-width: 768px){
+  .n-navbar{
+    background-color: #4267b2
+  }
+
+  .n-btn{
+    border: 0px;
+    border-radius: 0px;
+    background-color: #fffe;
+  }
+  
+  .n-a{
+    border-left: 1px solid #1715152b;
+    height: 22px;
+    padding: 0 15px 0 15px !important;
+    margin-top: 15px;
+    color: white !important;
+  }
+
+  .left-sidebar{
+    width: 29%;
+    display: block;
+    float: left;
+    min-height: 50px;
+    position: relative;
+    word-wrap: break-word;
+    padding-left: 150px;
+  }
+
+  .right-sidebar{
+    display: block;
+    float: left;
+    width: 30%;
+    padding-right: 50px;
+    padding-left: 20px; 
+  }
+
+  .content{
+    width: 40%;
+    display: block;
+    float: left;
+    height: 60vw;
+  }
+
+  .left-sidebar-content .list-group-item {
+    background-color: #e9ebee;
+    border: 0px;
+  }
+
+  .right-sidebar-content .sidebar-block{
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #e8e7e7;
+  }
+  
+  .sidebar-block a{
+    margin-right: 3px;
+    float: right;
+  }
+
+}
+
+.content-timeline .n-card{
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #e8e7e7;
+  margin-top: 10px;
+}
+
+.content-timeline .n-post-card{
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #e8e7e7;
+}
+
+.story-list-item{
+  align-items: center;
+  box-sizing: border-box;
+  display: flex;
+  flex: 1 1 0%;
+  justify-content: flex-start;
+  margin-bottom: 8px;
+  min-height: 56px;
+  position: relative;
+}
+
+.n-card-img{
+  width: 100%;
+  height: 350px;
+}
+
+.n-actions{
+  margin-top:5px;
+  border-top: 1px solid #e8e7e7;
+  padding-top: 15px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.n-actions > div{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image-thumbnail{
+  border: none;
+  height: 56px;
+  padding: 2px 2px;
+  width: 56px;
+  border-radius: 50%;
+  box-sizing: border-box;
+  padding: 2px 2px;
+  z-index: 0;
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.user-image{
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .1);
+  box-sizing: content-box;
+  object-fit: cover;
+  object-position: center;
+  position: relative;
+  vertical-align: middle;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.user-title{
+  display: block;
+  margin-left: 8px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  text-decoration: none;
+  border: 0px solid black;
+}
+.icon-img{
+  height: 32px;
+  min-height: initial;
+  width: 32px;
+  position: relative;
+  margin-left: 4px;
+  border-radius: 50%;
+}
+button{
+  color:black;
+  background-color: grey;
+  border: 1px solid red;
+  height: 40px;
+  width: 70px;
 }
